--- a/client/src/components/Jumbotron/Jumbotron.css
+++ b/client/src/components/Jumbotron/Jumbotron.css
@@ -6,20 +6,23 @@
     color: white;
 }
 
-.title {
-    margin: 0px;
+.text-div {
     text-align: center;
-    padding-top: 110px;
+}
+
+.title {
+    margin: 0;
+    padding-top: 100px;
     font-size: 120px;
 }
 
 .tagline, .btn-div {
-    text-align: center;
     font-size: 25px;
 }
 
 .btn {
     background-color: rgb(184, 156, 32);
 }
+
 
 
