--- a/client/src/components/Navbar/Navbar.css
+++ b/client/src/components/Navbar/Navbar.css
@@ -2,10 +2,10 @@
     margin: 0px 0px 0px 30px;
 }
 
-.avatar {
-    margin: 10px 30px 0px 15px;
-}
-
 .navbar-fixed {
     margin: 0px;
+}
+
+.avatar {
+    margin: 0px 15px;
 }
