--- a/client/src/pages/User/User.css
+++ b/client/src/pages/User/User.css
@@ -31,3 +31,14 @@
 .product-card:hover {
     opacity: 0.65;
 }
+
+.delete-btn > .btn {
+    width: 100%;
+    height: 25px;
+    line-height: 180%;
+    background-color: rgb(167, 167, 167);
+}
+
+.delete-btn > .btn:hover {
+    background-color: rgb(224, 77, 77);
+}
