--- a/client/src/components/Navbar/Navbar.css
+++ b/client/src/components/Navbar/Navbar.css
@@ -13,3 +13,9 @@
 .brand-logo {
     align-content: left;
 }
+
+@media only screen and (max-width: 992px) {
+    nav .brand-logo {
+        left: 15%;
+    }
+}
